--- a/_posts/2024-12-23-example.md
+++ b/_posts/2024-12-23-example.md
@@ -1,7 +1,7 @@
 ---
 layout: note
-title:  "Functional data structures"
-date: 2024-12-22
+title:  "Example"
+date: 2024-12-23
 last_modified_at: 
 categories: [Functional Programming]
 tags: [Lazy evaluation]
@@ -30,10 +30,10 @@ Consider a simple **BST** (binary search tree). Here is a simple implementation 
 
 ### Some smaller section
 
-aiwdjwijdia , 
+Text around the toggle link
 <span class="toggle-link" onclick="toggleNote('example1')">
   Slidey slidey
-</span> asddijaiwjdi iajdi jaijwi dasddijaiwjdi iajdi jaijwi dasddijaiwjdi iajdi jaijwi d
+</span>  Some other nonsense.
 <div id="sliding-note-example1" class="sliding-note">
   <div class="sliding-note-content">
     This is a detailed explanation hidden by default. It will slide open when clicked.
